--- a/config/database.yml
+++ b/config/database.yml
@@ -9,10 +9,10 @@ development:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: mysmallcharity_development
+  database: mysmallcharity
   pool: 5
-  username: root
-  password:
+  username: RoR_MSC
+  password: UILiayC_6Mbu
   socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
@@ -24,16 +24,16 @@ test:
   reconnect: false
   database: mysmallcharity_test
   pool: 5
-  username: root
-  password:
+  username: RoR_MSC_test
+  password: test
   socket: /var/run/mysqld/mysqld.sock
 
 production:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: mysmallcharity_production
+  database: mysmallcharity
   pool: 5
-  username: root
-  password:
+  username: RoR_MSC
+  password: UILiayC_6Mbu
   socket: /var/run/mysqld/mysqld.sock
